fix missing space above content filter on Safari

--- a/wp-content/themes/mojintranet/assets/css/src/modules/_content_filters.scss
+++ b/wp-content/themes/mojintranet/assets/css/src/modules/_content_filters.scss
@@ -19,8 +19,7 @@
   .filter-label {
     @extend %medium-copy;
     display: inline-block;
-    margin-top: 20px;
-    padding: 0;
+    padding: 20px 0 0;
     font-weight: bold;
     color: #333;
   }
